Changing namespace names.

--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -50,7 +50,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.sipper.MainActivity" >
+    tools:context="com.dermotblair.sipper.MainActivity" >
 
     <item
         android:id="@+id/action_settings"
