--- a/res/layout/activity_add_account.xml
+++ b/res/layout/activity_add_account.xml
@@ -57,7 +57,7 @@
 	 android:paddingLeft="@dimen/activity_horizontal_margin"
 	 android:paddingRight="@dimen/activity_horizontal_margin"
 	 android:paddingTop="@dimen/activity_vertical_margin"
-	 tools:context="com.example.sipper.MainActivity"  >
+	 tools:context="com.dermotblair.sipper.MainActivity"  >
     
     <TableLayout
         android:layout_width="match_parent"
